Moves style fix to javascript, so that it is applied only if the user is on mobile

--- a/src/sass/templates/_ndla_timeline.scss
+++ b/src/sass/templates/_ndla_timeline.scss
@@ -46,9 +46,6 @@ body,
 .lo_sectionList-wrapper {
   height: 100%;
 }
-#app {
-  overflow: scroll;
-}
 
 img {
   width: 100%;
